// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rollup default lodash import with useLodashEs, transforms to namespace import 1`] = `
"import * as _ from 'lodash-es';

function isNonNilArray(input) {
  return Array.isArray(input) && _.every(input, _.negate(_.isNil));
}

export { isNonNilArray };
"
`;

exports[`rollup mixed default + named lodash import with useLodashEs, transforms to namespace + named imports 1`] = `
"import * as _ from 'lodash-es';
import { negate, isNil } from 'lodash-es';

function isNonNilArray(input) {
  return Array.isArray(input) && _.every(input, negate(isNil));
}

export { isNonNilArray };
"
`;

exports[`rollup named lodash and lodash/fp imports with plugin & cjs output 1`] = `
"'use strict';

var isNil = require('lodash/isNil.js');
var negate = require('lodash/negate.js');
var every = require('lodash/fp/every.js');

const everyNonNil = every(negate(isNil));

function isNonNilArray(input) {
  return Array.isArray(input) && everyNonNil(input);
}

exports.isNonNilArray = isNonNilArray;
"
`;

exports[`rollup named lodash and lodash/fp imports with plugin & es output 1`] = `
"import isNil from 'lodash/isNil.js';
import negate from 'lodash/negate.js';
import every from 'lodash/fp/every.js';

const everyNonNil = every(negate(isNil));

function isNonNilArray(input) {
  return Array.isArray(input) && everyNonNil(input);
}

export { isNonNilArray };
"
`;

exports[`rollup named lodash and lodash/fp imports with plugin, ES output, & useLodashEs 1`] = `
"import { negate, isNil } from 'lodash-es';
import { every } from 'lodash-es/fp';

const everyNonNil = every(negate(isNil));

function isNonNilArray(input) {
  return Array.isArray(input) && everyNonNil(input);
}

export { isNonNilArray };
"
`;

exports[`rollup named lodash and lodash/fp imports without plugin 1`] = `
"'use strict';

var lodash = require('lodash');
var fp = require('lodash/fp');

const everyNonNil = fp.every(lodash.negate(lodash.isNil));

function isNonNilArray(input) {
  return Array.isArray(input) && everyNonNil(input);
}

exports.isNonNilArray = isNonNilArray;
"
`;
